--- a/home.html
+++ b/home.html
@@ -107,7 +107,26 @@
                 [`Contact us`]: <strong itemprop="telephone">{$wa->shop->settings('phone')}</strong>
             </p>
         {/if}
-        <p class="align-center gray">[`Edit this information in the <strong>home.html</strong> template file using built-in design editor in the store backend.`]</p>
+
+
+        <p class="align-center gray"><h5>"Tools" - совеременная и удобная тема дизайна, разработанная специалистами Wa-Plugins.</h5>
+        <h4>10 преимуществ темы "Tools"</h4>
+      
+        <ol>
+            <li>Благодаря гибким настрокам и огромному множеству цветовых решений тема идеально впишется в концепцию практически любого магазина. 11 цветовых схем и 30 фоновых изображений образуют 330 возможных комбинаций оформления. <br/>
+                Хотите больше? <br/> Загрузите свое фоновое изображение или обратитесь в нашу Службу Поддержки <strong>support@wa-plugins.ru</strong> - мы перекрасим тему по Вашему заказу.</li>
+            <li>Кроссбраузерная верстка обеспечивает корректное отображение в различных браузерах.</li>
+            <li>Поддержка <strong>"schema.org".</strong></li>
+            <li>Красивый  удобный эффект лупы при наведении на товар, открывающий покупателю возможность детального осмотра. При нажатии на товар - увеличенное изображение.</li>
+            <li><b>Полностью адаптивный дизайн!</b> Тема выглядит одинаково привлекательно на всех разрешениях: от 320рх старых экранов мобильных телефонов до 1980рх современного широкоформатного монитора.</li>
+            <li>Два режима просмотра товаров в категории: списком или сеткой.</li>
+            <li>Оформление заказа на одной странице (без переходов!). Данный способ способствует повышению конверсии Магазина.</li>
+            <li>Мобильная Фотогалерея и Слайд-шоу. При нажатии на изображение в карточке товара запускается полноэкранный просмотр с возможностью запуска слайд-шоу.  </li>
+            <li>Встроенные слайдер изображений и слайдер товаров</li>
+            <li>Оперативная поддержка (<b>support@wa-plugins.ru</b>) программного продукта: пишите - мы обязательно решим возникшую проблему или доработаем тему в индивидуальном порядке! </li>
+        </ol>
+        <p>Изменить текст в этом блоке можно в файле <strong>home.html</strong> (Магазин -&GT; Витрина -&GT; Шаблоны -&GT; home.html).</p>
+
         <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
             <meta itemprop="streetAddress" content="">
             <meta itemprop="addressLocality" content="">
