--- a/category.html
+++ b/category.html
@@ -2,15 +2,18 @@
     {if $active_sort === null}
         {$active_sort = waRequest::get('sort')}
     {/if}
-
     {$inverted = in_array($sort, array('rating', 'create_datetime', 'total_sales', 'count', 'stock'))}
     {$data = waRequest::get()}
+    {$data_active = waRequest::get()}
     {$data['sort'] = $sort}
+    {$data_active['sort'] = $sort}
     {if $sort == $active_sort}
         {if waRequest::get('order') == 'asc'}
             {$data['order'] = 'desc'}
+            {$data_active['order'] = 'asc'}
         {else}
             {$data['order'] = 'asc'}
+            {$data_active['order'] = 'desc'}
         {/if}
     {else}
         {if $inverted}
@@ -19,7 +22,10 @@
             {$data['order'] = 'asc'}
         {/if}
     {/if}
-    <option value="?{http_build_query($data)}" {if $active_sort == $sort}selected="selected"{/if}>{$name} {if $active_sort == $sort}{if $data['order'] == 'asc'}&uarr;{else}&darr;{/if}{/if}</option>
+    {if $active_sort == $sort}
+        <option style="display: none;" value="?{http_build_query($data_active)}" {if $active_sort == $sort}selected="selected"{/if}>{$name} {if $active_sort == $sort}{if $data_active['order'] == 'asc'}&uarr;{else}&darr;{/if}{/if}</option>
+    {/if}
+    <option value="?{http_build_query($data)}">{$name} {if $active_sort == $sort}{if $data['order'] == 'asc'}&uarr;{else}&darr;{/if}{/if}</option>
 {/function}
 
 {$compare = waRequest::cookie('shop_compare', array(), waRequest::TYPE_ARRAY_INT)}
@@ -80,7 +86,7 @@
         <div class="sort"><b>[`Sort by`]:</b>
             <select id="selectProductSort">
                 {if !empty($category) && !$category.sort_products}
-                    <option value="{$wa->currentUrl(0, 1)}" {if !$active_sort} selected="selected"{/if} >[`New & Popular`]</option>
+                    <option value=" " {if !$active_sort} selected="selected"{/if} >[`New & Popular`]</option>
                 {/if}
                 {foreach $sort_fields as $sort => $name}
                     {$params = ['sort' => $sort, 'name' => $name, 'active_sort' => $active_sort]}
@@ -92,20 +98,22 @@
             </select>
         </div>
     {/if}
-
-    {$products_pers = explode(',',$theme_settings.products_per_page)}
-    <div class="limit"><b>[`Show by`]:</b>
-        <select id="nb_item" name="nb_item">
-            {if isset($smarty.cookies.products_per_page)}
-                {$products_per_page = $smarty.cookies.products_per_page}
-            {else}
-                {$products_per_page = 50}
-            {/if}
-            {foreach $products_pers as $products_per}
-                <option value="{$products_per}" {if $products_per_page  == $products_per}selected="selected"{/if} >{$products_per}</option>
-            {/foreach}
-        </select>
-    </div>
+   
+    {if empty($theme_settings.use_lazyloading)}
+        {$products_pers = explode(',',$theme_settings.products_per_page)}
+        <div class="limit"><b>[`Show by`]:</b>
+            <select id="nb_item" name="nb_item">
+                {if isset($smarty.cookies.products_per_page)}
+                    {$products_per_page = $smarty.cookies.products_per_page}
+                {else}
+                    {$products_per_page = 50}
+                {/if}
+                {foreach $products_pers as $products_per}
+                    <option value="{$products_per}" {if $products_per_page  == $products_per}selected="selected"{/if} >{$products_per}</option>
+                {/foreach}
+            </select>
+        </div>
+    {/if}
 
 
 
@@ -113,7 +121,7 @@
         <a class="display_view" data-view="list" id="list_a">
             <i class="fa fa-list"></i>
         </a>  
-        <a data-view="grid" class="display_view" id="grid_b">
+        <a class="display_view" data-view="grid"  id="grid_b">
             <i class="fa fa-th"></i>
         </a>
     </div>
@@ -137,7 +145,7 @@
 <div class="compare-form">
     <a href="{$wa->getUrl('/frontend/compare/', ['id' => implode(',', $compare) ])}" class="bt_compare_bottom button" {if count($compare)<2}disabled="disabled"{/if}>
         <span>
-           <i class="fa fa-bar-chart-o"></i> [`Compare`] (<strong class="total-compare-val">{count($compare)}</strong>)
+            <i class="fa fa-bar-chart-o"></i> [`Compare`] (<strong class="total-compare-val">{count($compare)}</strong>)
         </span>
     </a>
 </div>
