--- a/search.html
+++ b/search.html
@@ -39,8 +39,8 @@
 {else}
 
     <div class="product-filter">
-        {if $wa->get('list') == 'viewed_products'}
-            <a class="button bt_clean_viewed" href="/cart/">
+        {if $wa->get('list') == 'viewed_products' || $wa->get('list') == 'wishlist'}
+            <a class="button bt_clean_list" data-list="{if $wa->get('list') == 'wishlist'}shop_wishlist{else}{$wa->get('list')}{/if}" href="#">
                 <span>
                     <i class="fa fa-trash"></i>
                     [`Clear list`]
@@ -63,7 +63,7 @@
 {/if}
 </div>
 
-<div class="compare-form">
+<div class="compare-form" {if !$products} style="display:none;" {/if}>
     <a href="{$wa->getUrl('/frontend/compare/', ['id' => implode(',', $compare) ])}" class="bt_compare_bottom button" {if count($compare)<2}disabled="disabled"{/if}>
         <span>
             <i class="fa fa-bar-chart-o"></i> [`Compare`] (<strong class="total-compare-val">{count($compare)}</strong>)
